--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Todo App</title>
 </head>
 <body>
-    <div class="header">
-        <img src="./eisenhower-matrix.jpg" alt="picture of eisenhower method">
-        <a class="more_inf"
+    <header class="header">
+        <img src="./assets/images/eisenhower-matrix.jpg" alt="picture of eisenhower method">
+        <a class="header_link"
         href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main-container">
-        <section class="section-add_item">
+    </header>
+    <main class="main-container">
+    <section>
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
         <input id="new-task" class="task" type="text"/>
@@ -23,39 +23,39 @@
         </div>
     </section>
     <h3>Todo</h3>
-    <ul id="incompleteTasks">
-    <li>
-        <input type="checkbox"/>
+    <ul id="incomplete-tasks">
+      <li>
+        <input type="checkbox" class="checkbox"/>
         <label class="task">Pay Bills</label>
         <input type="text" class="task"/>
         <button class="edit">Edit</button>
-        <button class="delete">
-            <img src="./remove.svg" alt="delete animation">
+        <button class="delete-btn">
+            <img class="delete-icon"src="./assets/images/remove.svg" alt="delete animation icon">
         </button>
-    </li>
-    <li class="editMode">
-        <input type="checkbox"/>
+      </li>
+      <li class="editMode">
+        <input type="checkbox" class="checkbox"/>
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task"/>
         <button class="edit">Save</button>
-        <button class="delete">
-            <img src="./remove.svg" alt="delete animation">
+        <button class="delete-btn">
+            <img class="delete-icon" src="./assets/images/remove.svg" alt="delete animation icon">
         </button>
-    </li>
+      </li>
     </ul>
     <h3>Completed</h3>
     <ul id="completed-tasks">
         <li>
-            <input type="checkbox" checked/>
+            <input type="checkbox" checked class="checkbox"/>
             <label class="task">See the Doctor</label>
             <input type="text" class="task"/>
             <button class="edit">Edit</button>
-            <button class="delete">
-                <img src="./remove.svg" alt="delete animation">
+            <button class="delete-btn">
+                <img class="delete-icon" src="./assets/images/remove.svg" alt="delete animation icon">
             </button>
-    </li>
+        </li>
     </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
 </body>
 </html>
