--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="main-container">
     <section>
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="new-task_wrapper">
         <input id="new-task" class="task" type="text"/>
         <button>Add</button>
         </div>
@@ -27,16 +27,16 @@
       <li>
         <input type="checkbox" class="checkbox"/>
         <label class="task">Pay Bills</label>
-        <input type="text" class="task"/>
+        <input type="text" class="task list_input"/>
         <button class="edit">Edit</button>
         <button class="delete-btn">
             <img class="delete-icon"src="./assets/images/remove.svg" alt="delete animation icon">
         </button>
       </li>
-      <li class="editMode">
+      <li class="edit-tasks">
         <input type="checkbox" class="checkbox"/>
         <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task"/>
+        <input type="text" value="Go Shopping" class="task list_input"/>
         <button class="edit">Save</button>
         <button class="delete-btn">
             <img class="delete-icon" src="./assets/images/remove.svg" alt="delete animation icon">
@@ -48,7 +48,7 @@
         <li>
             <input type="checkbox" checked class="checkbox"/>
             <label class="task">See the Doctor</label>
-            <input type="text" class="task"/>
+            <input type="text" class="task list_input"/>
             <button class="edit">Edit</button>
             <button class="delete-btn">
                 <img class="delete-icon" src="./assets/images/remove.svg" alt="delete animation icon">
