fix: added link to the header to be able to check my  github account

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header class="header">
+        <h2><a href="https://github.com/azimovachinara2004/clean-code-s1e1/tree/clean-code-s1e1">Link to Github account</a></h2>
         <img src="./assets/images/eisenhower-matrix.jpg" alt="picture of eisenhower method">
         <a class="header_link"
         href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
